--- a/Flow/app/src/main/AndroidManifest.xml
+++ b/Flow/app/src/main/AndroidManifest.xml
@@ -16,16 +16,17 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".activity.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity android:name=".activity.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.SignInActivity" />
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.OutActivity" />
+        <activity android:name=".activity.OutCheckActivity" />
     </application>
 
 </manifest>
