--- a/Flow/app/src/main/AndroidManifest.xml
+++ b/Flow/app/src/main/AndroidManifest.xml
@@ -10,7 +10,15 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar" >
+        android:theme="@style/AppTheme.NoActionBar">
+
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_icon"
+            android:resource="@mipmap/ic_launcher" />
+        <meta-data
+            android:name="com.google.firebase.messaging.default_notification_color"
+            android:resource="@color/colorAccent" />
+
         <activity
             android:name=".activity.MealActivity"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -27,6 +35,13 @@
         <activity android:name=".activity.SignUpActivity" />
         <activity android:name=".activity.OutActivity" />
         <activity android:name=".activity.OutCheckActivity" />
+
+        <service android:name=".service.NotificationService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
     </application>
 
 </manifest>
